- [COMPLETE] Music Videos
- [COMPLETE] global search addon skinned
- [COMPLETE] GameOSD.xml
- [COMPLETE] Adjust alignment of home menu items based on item count
- [NEW] Additional wallpapers (Thanks Dadebue)
- [NEW] USER OPTION: Disable recently added content for movies, tvshows and music

[GO TO ALBUM / ARTIST] Update script.

[FIXED] Subtitle default bug
[FIXED] library update progress bar

- check controls for new window: MyGames.xml
- Screenshots etc need updating
- SPOTIFY SUPPORT: playlists

[V1.3.3]
- [FIXED] Weather label showing on homescreen even if no weather plugin enabled.
- Minor tweaks

[V1.3.2]
- [NEW] font support for Hebrew (thanks Arthurvaverko)
- [FIXED] Mute icon (thanks Arthurvaverko)
- [FIXED] Equaliser animation can now be disabled via low power mode (thanks Kaputt3)
- [UPDATED] Unwatched item indicators on tvshow and season views
- [UPDATED] Weather returned to homescreen


[V1.3.1]
- [FIXED] back button not working correctly on plugin-based poster views
- [NEW] Homescreen menu hide function

[V1.3.0]

***Users who are upgrading from V1.2x are strongly encouraged to reset their menu structures to take account of structural changes to the skin***

- [NEW] Spotlight area removed and reintegrated into standard library views
- [NEW] Homescreen redesigned
- [NEW] Music fullscreen view redesigned
- Numerous tweaks and polishes skin wide

[V1.2.4]
- [UPDATED] French language file
- [UPDATED] Norwegian language file
- [UPDATED] Polish language file
- [UPDATED] Home screen tweaked
- [UPDATED] PVR Channel group control added to PVR section
- [FIXED] Music playlist view
- Various minor tweaks

[V1.2.3]
- [FIXED] Fullscreen music activation could hang kodi in some cases
- [FIXED] Incorrect casing on some font calls (thanks BigNoid)
- [FIXED] Audio offset blocked by dialog background (thanks PaulVT / iamgroot)
- [FIXED] Remove script-skinshortcuts-includes.xml from github tree
- [FIXED] Vignette on artist slideshow adjusted to increase brightness