@@ -3,7 +3,7 @@
     <defaultcontrol always="true">9999</defaultcontrol>
     <onload condition="Skin.hassetting(stopVideoOnMenu) + !Player.HasAudio">PlayerControl(stop)</onload>
     <include>fadeInOut</include>
-	<views>50</views>
+	<views>50,51</views>
     <controls>
         <include>globalBackground</include>
         <!--page container group-->
@@ -18,7 +18,7 @@
             </control>
             <!--page scrollbar-->
             <control type="group" id="8000">
-                <visible>Control.IsVisible(60)</visible>
+                <visible>Control.IsVisible(60) + !EXP[isPhotoAlbum]</visible>
                 <animation effect="fade" start="100" end="0" time="100" condition="!controlgroup(8000).hasfocus">conditional</animation>
                 <control type="scrollbar" id="60">
                     <posx>54r</posx>
@@ -41,7 +41,7 @@
         <include>DebugGrid</include>
         <control type="label">
             <include>WindowID</include>
-            <label>MyPics.xml</label>
+            <label>MyPics.xml path: $INFO[container.folderpath] folder: $INFO[container.foldername] content: $INFO[container.content]</label>
         </control>
     </controls>
 </window>
